# daedalus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  SPEC.md  __init__.py  plugin.yaml  pyproject.toml  requirements.txt  verify-epic-label.py
.github/workflows/: changelog.yml  ci.yml  dependency-audit.yml  e2e-nightly.yml  pipeline.yml  (+2 more)
.hermes/: daedalus.yaml
config/: __init__.py  daedalus.yaml  defaults.py  project-config-template.yaml
core/: __init__.py  cli.py  concurrent_dedup.py  crash_retry.py  cron_parser.py  dag_enrichment.py  db.py  dispatch_selftest.py  dispatch_state.py  file_overlap.py  github_project.py  goal_mode.py  iterate.py  kanban.py  label_projection.py  native_bounds.py  notification_sender.py  notify_templates.py  provider_failover.py  registry.py  source_specs.py  sweeper.py  sweeper_cli.py  sync_profiles.py  thread_delivery.py  tier_promotion.py  util.py  webhook_dispatch.py  webhook_normalizer.py  workspace.py
dashboard/: _shared.py  build.js  cron_helpers.py  manifest.json  package-lock.json  package.json  plugin_api.py  test-build.js  test-codingAgent.js  test-configDirty.js  test-cronSchedule.js  test-derive.js  test-providerFields.js
docs/: INSTALLATION_GUIDE.md  USER_GUIDE_NEW_BEHAVIORS.md  ci-plugin-lifecycle.md  design-retry-cap-notification.md  documentation-update-plan.md  e2e-smoke-test.md  gap-analysis.md  notification-threading.md  qa-gate-design.md
scripts/: agent_comment.py  append_changelog.py  check_dist_drift.py  daedalus-advance.sh  daedalus-agy-run.sh  daedalus-delegate.sh  daedalus-detect-pr.sh  daedalus-ready.sh  daedalus-worktree-spawn.sh  daedalus_dispatch.py  daedalus_resolve_project.py  e2e_smoke_test.sh  gateway_watchdog.py  postinstall.py  provision_roster.sh  register_advance_hook.py  setup.sh  take_screenshots.py  uninstall.sh  update_changelog.py  watchdog.py
tasks/: PLAN-daedalus-program.md  SPEC-daedalus-dashboard.md  SPEC-installable-plugin.md  findings-issue-1380-antigravity-cli.md  lessons.md  plan.md  spec-issue-1114.md  spec-issue-1128.md  spec-issue-1161.md  spec-issue-1241.md  spec-issue-1294.md  spec-issue-1350.md  spec-issue-88.md  spec-issue-961.md  spec-session-beta32-audit.md  todo.md
templates/: daedalus.yaml
tests/: conftest.py  test_accessibility_gate_1371.py  test_adr_1367_model_sync.py  test_advance_hook_registration.py  test_advance_hook_resolver.py  test_agent_bodies.py  test_agent_comment.py  test_append_changelog.py  test_auto_promotion_to_board.py  test_azure_devops_provider.py  test_base_provider_batch_ci.py  test_bugfixes_regex_and_haslabel.py  test_changelog_workflow.py  test_coding_agent_model_sync.py  test_comment_howto_gh.py  test_concurrent_decompose_891.py  test_concurrent_dedup.py  test_concurrent_dispatch.py  test_conditional_ready_labeling.py  test_config_fingerprint.py  test_config_fingerprint_integration.py  test_config_integration.py  test_config_options.py  test_crash_retry_native_bounds_1297.py  test_cron_parser.py  test_daedalus.py  test_dag_enrichment.py  test_dashboard_api.py  test_db.py  test_decomposed_marker.py  test_delegate_wrapper.py  test_delegation_wrapper_1280.py  test_dependency_gating.py  test_dependency_ready_promotion.py  test_depends_on_line.py  test_dev_mode_redirect.py  test_developer_single_flight_1375.py  test_direct_dispatch_1329.py  test_dispatch.py  test_dispatch_closed_issue_skip_1115.py  (+172 more)
(+88 files in other folders)
