[project]
name = "daedalus"
version = "0.1.0"
description = "Hermes Daedalus pipeline plugin"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "filelock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
xfail_strict = true
markers = [
    "uses_real_hk: opt out of the autouse core.kanban._hk stub to exercise the real _hk (still guarded against writing the live board; issue #1209)",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]
